Adiciona inicio resolução exercicio 6

--- a/fundamentos/bloco-5-DOM-eventos-e-webStorage/execicios-5-3/style.css
+++ b/fundamentos/bloco-5-DOM-eventos-e-webStorage/execicios-5-3/style.css
@@ -156,3 +156,12 @@ label {
 .color {
   background-color: aquamarine;
 }
+
+.newText {
+  background-color: red;
+}
+
+.mouse {
+  font-size: 35px;
+  transition-delay: 0.4s;
+}
