--- a/fundamentos/bloco-6-forms-felxbox-responsivo/exercicios6.4/style.css
+++ b/fundamentos/bloco-6-forms-felxbox-responsivo/exercicios6.4/style.css
@@ -62,6 +62,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  flex-basis: 700px;
+  align-content: stretch;
 }
 
 .card-container div {
@@ -72,12 +74,18 @@ body {
   height: 150px;
   justify-content: center;
   margin: 10px;
+  flex-basis: 16%;
+  flex-grow: 1;
 }
 
 .aside-container {
   display: flex;
   flex-direction: column;
   margin: 20px;
+  justify-content: center;
+  align-content: center;
+  flex-basis: 350px;
+  flex-grow: 2;
 }
 
 .aside-container h3,
